# degen-llms

./: .gitignore  LICENSE  README.md  pyproject.toml
blackjack/: __init__.py  __main__.py  bankroll.py  cards.py  config.py  dealer.py  display.py  hand.py  main.py  player.py  rng.py  rules.py  runner.py  strategy.py  table.py
docs/: 404.html  README.md  adding-activities.md  architecture.md  blackjack.md  chip-economy.md  getting-started.md  index.html  maintenance.html  offline.html  player-guide.md  saves.md  slots.md  sportsbook.md  testing.md
logs/: README.md
mandalay_bay/: __init__.py  __main__.py  bank_account.py  casino_amenities.py  casino_amenities_experience.py  casino_time.py  chips.py  dealers.py  display.py  guest_directory.py  help_text.py  hotel.py  hotel_experience.py  hub.py  intoxication.py  main.py  pool_complex.py  pool_experience.py  prediction_markets.py  resort_bridge.py  resort_completion.py  rewards.py  rewards_experience.py  rewards_perks.py  room_amenities.py  save_menu.py  saves.py  session.py  sport_simulator.py  staff_manifest.py  stakes.py  vegas_time.py  world_cycle.py
poker/: __init__.py  hand_eval.py  holdem.py
scripts/: deploy-gh-pages.sh  export-legacy-horse-sprites.mjs  generate-horse-sprite-frames.mjs  log-gh-pages-workflow-failure.sh  smoke-test-horse-sprites.mjs  sync-gh-pages.sh  verify-gh-pages-live.sh  verify-gh-pages.sh
tests/: test_bank_account.py  test_blackjack_main.py  test_cards.py  test_casino_activities.py  test_casino_amenities.py  test_casino_chips.py  test_casino_navigation.py  test_dealers.py  test_hand.py  (+27 more)
(+106 files in other folders)
